Changed Exec command in desktop file to flatpak convention

--- a/res/linux/com.github.UDPLogger.UDPLogger.desktop
+++ b/res/linux/com.github.UDPLogger.UDPLogger.desktop
@@ -5,7 +5,7 @@ GenericName=c
 GenericName[de]=UDPLogger
 Comment=Logging and plotting UDP Data
 Comment[de]=Loggen und plotten von UDP Paketen
-Exec=UDPLogger %U
+Exec=com.github.UDPLogger.UDPLogger %U
 Icon=com.github.UDPLogger.UDPLogger.png
 Terminal=false
 Type=Application
