--- a/res/linux/UDPLogger.desktop
+++ b/res/linux/UDPLogger.desktop
@@ -5,8 +5,8 @@ GenericName=c
 GenericName[de]=UDPLogger
 Comment=Logging and plotting UDP Data
 Comment[de]=Loggen und plotten von UDP Paketen
-Exec=com.github.UDPLogger.UDPLogger %U
-Icon=com.github.UDPLogger.UDPLogger.png
+Exec=com.github.Murmele.UDPLogger %U
+Icon=com.github.Murmele.UDPLogger.png
 Terminal=false
 Type=Application
 Categories=Electronics;
