--- a/res/linux/UDPLogger.desktop
+++ b/res/linux/UDPLogger.desktop
@@ -6,7 +6,7 @@ GenericName[de]=UDPLogger
 Comment=Logging and plotting UDP Data
 Comment[de]=Loggen und plotten von UDP Paketen
 Exec=com.github.Murmele.UDPLogger %U
-Icon=com.github.Murmele.UDPLogger.png
+Icon=com.github.Murmele.UDPLogger
 Terminal=false
 Type=Application
 Categories=Electronics;
