--- a/res/linux/UDPLogger.desktop
+++ b/res/linux/UDPLogger.desktop
@@ -5,7 +5,7 @@ GenericName=c
 GenericName[de]=UDPLogger
 Comment=Logging and plotting UDP Data
 Comment[de]=Loggen und plotten von UDP Paketen
-Exec=com.github.Murmele.UDPLogger %U
+Exec=com.github.Murmele.UDPLogger
 Icon=com.github.Murmele.UDPLogger
 Terminal=false
 Type=Application
